src/tests/integration/snapshots/mosaic__tests__integration__resize_left__cannot_resize_left_when_pane_to_the_left_is_at_minimum_width.snap
---
source: src/tests/integration/resize_left.rs
expression: snapshot
---
█        
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
         
